<resources>
    <string name="app_name">Dhai Al Tmaiuz</string>
    <string name="notifications">Notifications</string>
    <string name="si_su">Please Sign in or sign up .</string>
    <string name="ok">Ok</string>
    <string name="sign_in">Sign In</string>
    <string name="back">Back</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="new_account">New Account</string>
    <string name="field_req">Field required</string>
    <string name="inv_phone">Invalid phone</string>
    <string name="signning_in">Signing In...</string>
    <string name="full_name">Full name</string>
    <string name="phone">Phone</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="wait">Wait...</string>
    <string name="sign_up">Sign Up</string>
    <string name="perm_image_denied">Permission denied</string>
    <string name="upload_personal_photo">Upload personal photo</string>
    <string name="rsa">SR</string>
    <string name="home">Home</string>
    <string name="offers">Offers</string>
    <string name="my_order">My orders</string>
    <string name="fav">Favourite</string>
    <string name="me">Me</string>
    <string name="cancel">Cancel</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="update">Update</string>
    <string name="contact_us">Contact us</string>
    <string name="delete">Delete</string>

    <string name="update_password">Update password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="update_phone">Update phone</string>
    <string name="succ">Success</string>
    <string name="failed">Failed try again later</string>
    <string name="phone_number_not_exists">Phone number not exists</string>
    <string name="sgin_out">Signing out...</string>
    <string name="sign_out">Sign Out</string>
    <string name="order_sent_successfully">Order sent successfully</string>
    <string name="updating_phone">Updating phone number...</string>
    <string name="incorrect_old_password">incorrect old password</string>
    <string name="skip">Skip</string>
    <string name="dhai">Dhai</string>
    <string name="al_enjaz">Al Tmaiuz</string>
    <string name="profile">Profile</string>
    <string name="contact2">Contact</string>
    <string name="more">More</string>
    <string name="logout">Logout</string>
    <string name="jobs">Jobs</string>
    <string name="vocational_training">Vocational training</string>
    <string name="students">Students</string>
    <string name="other_service">Other service</string>
    <string name="electronic_services">Electronic services</string>
    <string name="my_orders">My orders</string>
    <string name="no_notifications_to_display">No notifications to display</string>
    <string name="new_order">New</string>
    <string name="current_order">Current</string>
    <string name="previous_order">Previous</string>
    <string name="no_orders_to_display">No orders to display</string>
    <string name="you_are_just_one_step_away">You are just one step away...</string>
    <string name="_500_500_pixel">500 pixel * 500 pixel(optional)</string>
    <string name="personal_information">Personal information</string>
    <string name="sign_up_using_phone">Sign up using phone</string>
    <string name="by_using_this_app_you_agree_to">By using this app you agree to</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="inv_email">Invalid email</string>
    <string name="inc_img_path">incorrect image path</string>
    <string name="pers_photo_req">Personal photo required</string>
    <string name="never_share_phone_number">We will never share or sell your phone number</string>
    <string name="your_privacy_guaranteed">Your privacy is 100% guaranteed</string>
    <string name="something">Something went haywire</string>
    <string name="phone_number_exists">Phone number or email are exist</string>
    <string name="logging_out">Logging out...</string>
    <string name="update_email">Update Email</string>
    <string name="update_name">Update Name</string>
    <string name="bank_account">Bank account</string>
    <string name="about_us">About us</string>
    <string name="developers">Developers</string>
    <string name="no_offers_to_display">No offers to display</string>
    <string name="no_services_to_display">No services to Display</string>
    <string name="no_ads_to_display">No ads to display</string>
    <string name="no_training_to_display">No trainings to display</string>
    <string name="start">Start time</string>
    <string name="end_time">End time</string>
    <string name="register">Register</string>
    <string name="additional_information">Information required for service</string>
    <string name="notes_optional">Notes (optional)</string>
    <string name="details_optinal">Description (optional)</string>
    <string name="charge_package">Charge package</string>
    <string name="buy">Buy</string>
    <string name="no_charge">No charge package</string>
    <string name="rev_bill">When reviewing a bank transfer a notification will be sent to you</string>
    <string name="no_bank_accounts">No Bank accounts</string>
    <string name="account_name">Account name</string>
    <string name="account_number">Account number</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_thank">Welcome to Dhya Al Tmaiuz thank you for join us</string>
    <string name="charge">Your charge</string>
    <string name="loading">Loading...</string>
    <string name="upload_bank_transfer_image">Upload bank transfer image</string>
    <string name="price">Price</string>
    <string name="reserve">Reserve</string>
    <string name="username">Username</string>
    <string name="re_type_password">Re-type password</string>
    <string name="password_not_match">password not match</string>
    <string name="details">Details :</string>
    <string name="save">Save</string>
    <string name="up_tr_bnk_img">upload transfer bank image</string>
    <string name="bank_transfer_image">Bank transfer image</string>
    <string name="date">Date</string>
    <string name="address">Address</string>
    <string name="no_jobs_to_display">No jobs to display</string>
    <string name="upload">upload</string>
    <string name="your_date_sent_successfully">Your data sent successfully</string>
    <string name="identity_number">Identity number</string>
    <string name="qualification">Qualification:</string>
    <string name="ch_qualification">Choose qualification</string>
    <string name="admin">Admin</string>
    <string name="order_not_accepted">Order is approved</string>
    <string name="order_is_approved">Order is accepted</string>
    <string name="order_finished">Order is finished</string>
    <string name="accepted">Accepted</string>
    <string name="refused">Refused</string>
    <string name="finished">Finished</string>
    <string name="package_1">package</string>
    <string name="organization">Organization</string>
    <string name="phone_number">Phone number</string>
    <string name="inc_ph_pas">incorrect email or password</string>
    <string name="recharge_code">Recharge code</string>
    <string name="code">Code</string>
    <string name="charge2">Charge</string>
    <string name="inc_code">incorrect code</string>
    <string name="no_enough_ch">No enough charge to reserve this service</string>
    <string name="forget_password">Forget password ?</string>

    <string name="we_will_send_you_a_link_to_on_the_email_recover_your_password">We will send you a link on your email to recover your password</string>
    <string name="recover_password">Recover password</string>
    <string name="inc_em">incorrect email address</string>
    <string name="cv">CV</string>
    <string name="up_cv_prof">Please upload your CV in your profile</string>
    <string name="add_info_req">Additional info required</string>

    <string-array name="spinner_qualification">
        <item>-Choose-</item>
        <item>without a qualification</item>
        <item>Primary</item>
        <item>Preparatory</item>
        <item>High school</item>
        <item>Institute</item>
        <item>Bachelor</item>

    </string-array>

</resources>
