<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:scrollbars="none"
    android:background="@color/gray1"

    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="4dp"
                android:src="@drawable/user_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/personal_information"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edt_sign_up_bg"
            android:hint="@string/full_name"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edt_sign_up_bg"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:layout_width="50dp"
                android:layout_height="37dp"
                android:layout_gravity="center_vertical"
                android:hint="+966"
                android:gravity="center"
                android:textColorHint="@color/gray"

                />

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:hint="@string/phone"
                android:inputType="phone"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="16sp"
                android:background="@color/white"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="15dp"
                tools:ignore="RtlCompat"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edt_sign_up_bg"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="37dp"
                android:layout_gravity="center_vertical"
                android:padding="7dp"
                android:src="@drawable/mail"

                />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:hint="@string/email_address"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:inputType="textEmailAddress"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edt_sign_up_bg"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="37dp"
                android:layout_gravity="center_vertical"
                android:padding="7dp"
                android:src="@drawable/user_color"

                />

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:hint="@string/username"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:inputType="textEmailAddress"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:background="@drawable/edt_sign_up_bg"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"

            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="37dp"
                android:layout_gravity="center_vertical"
                android:padding="7dp"
                android:src="@drawable/lock"
                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:counterEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary"
                app:errorEnabled="false"
                android:layout_marginEnd="10dp"
                tools:ignore="RtlCompat">
                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp"
                    android:background="@color/white"

                    />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:background="@drawable/edt_sign_up_bg"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"

            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="37dp"
                android:layout_gravity="center_vertical"
                android:padding="7dp"
                android:src="@drawable/lock"
                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:counterEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary"
                app:errorEnabled="false"
                android:layout_marginEnd="10dp"
                tools:ignore="RtlCompat">
                <EditText
                    android:id="@+id/edt_re_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:hint="@string/re_type_password"
                    android:inputType="textPassword"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp"
                    android:background="@color/white"

                    />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="4dp"
                android:src="@drawable/information" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/additional_information"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/edt_additional_info"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/edt_bg"
            android:gravity="top"
            android:hint="@string/additional_information"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="4dp"
                android:src="@drawable/details" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/details_optinal"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/edt_description"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/edt_bg"
            android:gravity="top"
            android:hint="@string/details_optinal"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="4dp"
                android:src="@drawable/edit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/notes_optional"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/edt_notes"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/edt_bg"
            android:gravity="top"
            android:hint="@string/notes_optional"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"
            />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:background="@drawable/btn_training_register"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:text="@string/send"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>
</ScrollView>